languages/montiarcautomaton-fe/src/test/resources/valid/C.maa
package valid;


component C {

  port
    in Integer i,
    out Integer o;

}