languages/montiarcautomaton-fe/src/test/resources/invalid/InvalidCD.maa
package invalid;

import invalid.InvalidDatatypes.invalidType;

component InvalidCD {
  port
    in invalidType a,
    out invalidType b;
}
